--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@aws-amplify/cli": "^12.13.0",
     "axios": "^1.6.2",
     "moment": "^2.29.4",
     "motion": "^10.16.4"
