--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@aws-amplify/cli": "^12.13.0",
-    "axios": "^1.7.7",
+    "@nuxtjs/axios": "^5.13.6",
     "moment": "^2.29.4",
     "motion": "^10.16.4",
     "portal-vue": "^3.0.0"
