--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.9",
     "moment": "^2.29.4",
     "motion": "^10.16.4",
-    "portal-vue": "^3.0.0"
+    "portal-vue": "^3.0.0",
+    "radix-vue": "^1.9.12"
   }
 }
