--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "axios": "^1.7.9",
     "cobe": "^0.6.4",
     "dompurify": "^3.2.6",
+    "easymde": "^2.20.0",
     "marked": "^9.1.6",
     "moment": "^2.29.4",
     "motion": "^10.16.4",
     "portal-vue": "^3.0.0",
     "radix-vue": "^1.9.12",
-    "vue-use-spring": "^0.3.3"
+    "sanity-plugin-markdown": "^6.0.0",
+    "vue-use-spring": "^0.3.3",
+    "vue3-pdfjs": "^0.1.6"
   }
 }
