--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -5,22 +5,63 @@
   "private": true,
   "dependencies": {
     "@babel/parser": "7.28.4",
+    "@portabletext/vue": "1.0.14",
     "@vue/compiler-core": "3.5.19",
     "@vue/compiler-dom": "3.5.19",
     "@vue/compiler-ssr": "3.5.19",
+    "@vue/devtools-api": "6.6.4",
     "@vue/reactivity": "3.5.19",
     "@vue/runtime-core": "3.5.19",
     "@vue/runtime-dom": "3.5.19",
     "@vue/server-renderer": "3.5.19",
     "@vue/shared": "3.5.19",
+    "asynckit": "0.4.0",
+    "axios": "1.11.0",
+    "call-bind-apply-helpers": "1.0.2",
+    "cobe": "0.6.4",
+    "combined-stream": "1.0.8",
+    "debug": "4.4.1",
+    "delayed-stream": "1.0.0",
     "devalue": "5.3.2",
+    "dunder-proto": "1.0.1",
     "entities": "4.5.0",
+    "es-define-property": "1.0.1",
+    "es-errors": "1.3.0",
+    "es-object-atoms": "1.1.1",
+    "es-set-tostringtag": "2.1.0",
     "estree-walker": "2.0.2",
+    "follow-redirects": "1.15.9",
+    "form-data": "4.0.4",
+    "framesync": "6.1.2",
+    "function-bind": "1.1.2",
+    "get-intrinsic": "1.3.0",
+    "get-proto": "1.0.1",
+    "gopd": "1.2.0",
+    "has-symbols": "1.1.0",
+    "has-tostringtag": "1.0.2",
+    "hasown": "2.0.2",
+    "hey-listen": "1.0.8",
     "hookable": "5.5.3",
+    "marked": "9.1.6",
+    "math-intrinsics": "1.1.0",
+    "mime-db": "1.52.0",
+    "mime-types": "2.1.35",
+    "moment": "2.30.1",
+    "ms": "2.1.3",
+    "phenomenon": "1.6.0",
+    "popmotion": "11.0.5",
+    "portal-vue": "3.0.0",
+    "proxy-from-env": "1.1.0",
     "source-map-js": "1.2.1",
+    "style-value-types": "5.1.2",
+    "supports-color": "10.2.0",
+    "tslib": "2.4.0",
     "ufo": "1.6.1",
     "unhead": "2.0.14",
     "vue": "3.5.19",
-    "vue-bundle-renderer": "2.1.2"
+    "vue-bundle-renderer": "2.1.2",
+    "vue-demi": "0.14.10",
+    "vue-router": "4.5.1",
+    "vue-use-spring": "0.3.3"
   }
 }
