--- a/.output/server/package.json
+++ b/.output/server/package.json
@@ -6,21 +6,21 @@
   "dependencies": {
     "@babel/parser": "7.28.4",
     "@portabletext/vue": "1.0.14",
-    "@vue/compiler-core": "3.5.19",
-    "@vue/compiler-dom": "3.5.19",
-    "@vue/compiler-ssr": "3.5.19",
+    "@vue/compiler-core": "3.5.21",
+    "@vue/compiler-dom": "3.5.21",
+    "@vue/compiler-ssr": "3.5.21",
     "@vue/devtools-api": "6.6.4",
-    "@vue/reactivity": "3.5.19",
-    "@vue/runtime-core": "3.5.19",
-    "@vue/runtime-dom": "3.5.19",
-    "@vue/server-renderer": "3.5.19",
-    "@vue/shared": "3.5.19",
+    "@vue/reactivity": "3.5.21",
+    "@vue/runtime-core": "3.5.21",
+    "@vue/runtime-dom": "3.5.21",
+    "@vue/server-renderer": "3.5.21",
+    "@vue/shared": "3.5.21",
     "asynckit": "0.4.0",
-    "axios": "1.11.0",
+    "axios": "1.12.2",
     "call-bind-apply-helpers": "1.0.2",
-    "cobe": "0.6.4",
+    "cobe": "0.6.5",
     "combined-stream": "1.0.8",
-    "debug": "4.4.1",
+    "debug": "4.4.3",
     "delayed-stream": "1.0.0",
     "devalue": "5.3.2",
     "dunder-proto": "1.0.1",
@@ -30,13 +30,14 @@
     "es-object-atoms": "1.1.1",
     "es-set-tostringtag": "2.1.0",
     "estree-walker": "2.0.2",
-    "follow-redirects": "1.15.9",
+    "follow-redirects": "1.15.11",
     "form-data": "4.0.4",
     "framesync": "6.1.2",
     "function-bind": "1.1.2",
     "get-intrinsic": "1.3.0",
     "get-proto": "1.0.1",
     "gopd": "1.2.0",
+    "has-flag": "4.0.0",
     "has-symbols": "1.1.0",
     "has-tostringtag": "1.0.2",
     "hasown": "2.0.2",
@@ -54,11 +55,11 @@
     "proxy-from-env": "1.1.0",
     "source-map-js": "1.2.1",
     "style-value-types": "5.1.2",
-    "supports-color": "10.2.0",
+    "supports-color": "8.1.1",
     "tslib": "2.4.0",
     "ufo": "1.6.1",
-    "unhead": "2.0.14",
-    "vue": "3.5.19",
+    "unhead": "2.0.17",
+    "vue": "3.5.21",
     "vue-bundle-renderer": "2.1.2",
     "vue-demi": "0.14.10",
     "vue-router": "4.5.1",
