added preview feature to test posts prior to pushing them live

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,14 @@ API_SECRET=your_rails_api_secret_key
 # API_BASE_URL=https://your-rails-backend.herokuapp.com
 # API_SECRET=your_production_secret
 
+# Preview Configuration (for Sanity Studio integration)
+PREVIEW_SECRET=your_32_character_preview_secret_from_sanity_studio
+
+# Sanity Configuration (if needed for direct client access)
+SANITY_PROJECT_ID=e1m6qdbk
+SANITY_DATASET=projects
+SANITY_API_TOKEN=your_sanity_token_with_read_permissions
+
 # Optional: Third-party integrations
 GITHUB_ACCESS_TOKEN=your_github_token_for_syncing_repos
 CONTENTFUL_SPACE_ID=your_contentful_space_id (if using Contentful)
