--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/image": "^1.11.0",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "nuxt": "^3.8.2",
+    "tailwindcss": "^3.4.18",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
@@ -26,7 +27,7 @@
     "@portabletext/vue": "^1.0.14",
     "@sanity/client": "^7.11.1",
     "@sanity/image-url": "^1.2.0",
-  "@selemondev/vue3-marquee": "^0.0.9",
+    "@selemondev/vue3-marquee": "^0.0.9",
     "@vueuse/motion": "^3.0.3",
     "axios": "^1.7.9",
     "cobe": "^0.6.4",
@@ -38,7 +39,7 @@
     "pdfjs-dist": "^5.4.149",
     "portal-vue": "^3.0.0",
     "radix-vue": "^1.9.12",
-    "sanity-plugin-markdown": "^6.0.0",
+    "sanity-plugin-markdown": "^2.1.2",
     "vue-use-spring": "^0.3.3",
     "vue3-pdfjs": "^0.0.1"
   }
