--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "@aws-amplify/cli": "^12.13.0",
     "@nuxtjs/axios": "^5.13.6",
     "@portabletext/vue": "^1.0.14",
