--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "@aws-amplify/cli": "^12.13.0",
     "@nuxtjs/axios": "^5.13.6",
     "@portabletext/vue": "^1.0.14",
@@ -35,12 +33,15 @@
     "cobe": "^0.6.4",
     "dompurify": "^3.2.6",
     "easymde": "^2.20.0",
+    "lucide-vue-next": "^0.548.0",
     "marked": "^9.1.6",
     "moment": "^2.29.4",
     "motion": "^10.16.4",
     "pdfjs-dist": "^5.4.149",
     "portal-vue": "^3.0.0",
     "radix-vue": "^1.9.12",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sanity-plugin-markdown": "^2.1.2",
     "vue-use-spring": "^0.3.3",
     "vue3-pdfjs": "^0.0.1"
